# 3D-graph-visualization-in-terminal

./: Cargo.toml  README.md  chat_server.dot  main.js
MultiGraphDisplay/dot-parser-wasm/: Cargo.toml
MultiGraphDisplay/dot-parser-wasm/pkg/: dot_parser_wasm.js
MultiGraphDisplay/dot-parser-wasm/src/: lib.rs
MultiGraphDisplay/public/: exoplanets_limited.csv  fizzbuzz.dot
MultiGraphDisplay/public/pkg/: dot_parser_wasm_bg.wasm  dot_parser_wasm_bg.wasm.d.ts  package.json
dot_parser_delta_computator/: Cargo.toml  README.md  index.html
dot_parser_delta_computator/MultiGraphDisplay/public/: planet_display.html
dot_parser_delta_computator/MultiGraphDisplay/public/pkg/: dot_parser_wasm.d.ts
dot_parser_delta_computator/graph display/: fizzbuzz3D.html  fizzbuzz3Dtest.html  package-lock.json  package.json
dot_parser_delta_computator/src/: lib.rs  main.rs
frontend/: .gitignore  Cargo.toml  README.md
frontend/assets/: style.css
frontend/shaders/: edges.wgsl  nodes.wgsl
frontend/src/: README.md  app.rs  camera.rs  dot.rs  gpu.rs  graph.rs  input.rs  main.rs
graph display/: fizzbuzz2D.html  fizzbuzz3D.html  fizzbuzz3Dtest.html  graph-display.html  script.js
src/: graph.rs  main.rs  shader.wgsl
