[package]
name = "graph-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.20"
winit = "0.29.15"
pollster = "0.3"
env_logger = "0.11"
log = "0.4"
glam = { version = "0.27", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1.14", features = ["derive"] }
anyhow = "1"