[package]
name = "dot_parser_wasm"
version = "0.1.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dot-parser = "0.1"  # Update this version as appropriate

[lib]
crate-type = ["cdylib"]  # This is required for WebAssembly

